tests/idris2/basic/basic030/expected
1/1: Building arity (arity.idr)
Error: While processing right hand side of foo. When unifying:
    Nat -> MyN
and:
    MyN
Mismatch between: Nat -> MyN and MyN.

arity:4:16--4:21
 1 | data MyN = MkN Nat Nat
 2 | 
 3 | foo : Nat -> Nat -> Nat
 4 | foo x y = case MkN x of
                    ^^^^^

